fix AE2 guide preview state synchronization